--- a/resource-service/Dockerfile
+++ b/resource-service/Dockerfile
@@ -19,7 +19,8 @@ COPY . .
 FROM builder-base as builder-test
 ENV GOTESTSUM_FORMAT=testname
 
-RUN go install gotest.tools/gotestsum@v1.7.0
+RUN apk add --no-cache git && \
+    go install gotest.tools/gotestsum@v1.7.0
 CMD gotestsum --no-color=false -- -coverprofile=coverage.txt -covermode=atomic -v ./... && mv ./coverage.txt /shared/coverage.txt
 
 FROM builder-base as builder
